--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/0f1f92aeb9.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./Logo-icon.png" type="image/x-icon">
     <title>SecInfo: Oficinas de Segurança</title>
   </head>
   <body>
